<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_battery">

    <fragment
        android:id="@+id/navigation_gestures"
        android:name="com.example.itog.ui.gestures.GesturesFragment"
        android:label="@string/title_gestures"
        tools:layout="@layout/fragment_gestures" />

    <fragment
        android:id="@+id/navigation_battery"
        android:name="com.example.itog.ui.battery.BatteryFragment"
        android:label="@string/title_battery"
        tools:layout="@layout/activity_main2" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.example.itog.ui.statistics.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />
</navigation>